--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <div id="lead-content">
             <h1>Ghazi Aoussaji</h1>
             <h2>Hardware Engineer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
-			<a href="doc/resume.pdf" class="btn-rounded-white"> download="resume">Download Resume</a>
+            <!--<a href="#" class="btn-rounded-white">Download Resume</a>-->
+			<a href="doc/resume.pdf" class="btn-rounded-white"> Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
