--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
                     <p>
                         I am an electrical engineer and microelectronics is my major.
 			I have a solid background in wireless communication, electronics, embedded systems and networking.
+		    </p>
+		    <p>
 			I am currently pusrsuing a PhD at IMT Atlantique in France.			
                     </p>
                 </div>
@@ -143,20 +145,21 @@
 				Key words: RF, FPGA and SOC, VHDL, MATLAB, MODELSIM
                 		</p>
             		</div>
-
-        	</div>
-	    
-        <h2 class="heading">Experience</h2>
+		</div>
         	<div id="experience-timeline">
             		<div data-date="Since October 2021">
-                		<h3>Codintek</h3>
+                		<h3>IMT ATLANTIQUEh3>
                 		<h4>PhD student</h4>
                 		<p>
-                   		Hardware Implimentation of fully pipelined turbo decoder
+                   		Hardware Implimentation of fully pipelined Turbo Decoder
                 		</p>
             		</div>
-
         	</div>
+	    
+
+
+
+
    </div>
     <!-- End #experience -->
 
