--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 		</div>
         	<div id="experience-timeline">
             		<div data-date="Since October 2021">
-                		<h3>IMT ATLANTIQUEh3>
+                		<h3>IMT ATLANTIQUE<h3>
                 		<h4>PhD student</h4>
                 		<p>
                    		Hardware Implimentation of fully pipelined Turbo Decoder
