--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
                 		</p>
             		</div>
 		</div>
+	  <h2 class="heading">Experience</h2>
         	<div id="experience-timeline">
             		<div data-date="Since October 2021">
                 		<h3>IMT ATLANTIQUE<h3>
