--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
                 		</p>
             		</div>
 		</div>
+	     </div>
+    <!-- End #experience -->
 	  <div id="experience" class="background-alt">
         	<div id="experience-timeline">
             		<div data-date="Since October 2021">
