--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
 	     </div>
     <!-- End #experience -->
 	  <div id="experience" class="background-alt">
+		<h2 class="heading">Experience</h2>
         	<div id="experience-timeline">
             		<div data-date="Since October 2021">
                 		<h3>IMT ATLANTIQUE<h3>
